[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lumo"
version = "0.1.0"
description = "On-device SME treasury agent: untrusted LLM reads, deterministic policy decides, Soroban contracts enforce"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["lumo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
