[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lumo"
version = "0.1.0"
description = "On-device SME treasury agent: untrusted LLM reads, deterministic policy decides, Soroban contracts enforce"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = ["pytest"]
# Only scripts/verify_policy_enforcement.py needs this; the app itself shells to
# the `stellar` CLI and never imports an SDK.
verify = ["stellar-sdk>=15,<16"]

[tool.setuptools.packages.find]
include = ["lumo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
