[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lumo"
version = "0.1.0"
description = "On-device SME treasury agent: untrusted LLM reads, deterministic policy decides, Soroban contracts enforce"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2,<3",
    "httpx>=0.27,<1",
    # Owner-signed create_intent through the policy-account (lumo/chain/
    # smart_account.py) needs an SDK — the stellar CLI can't produce the
    # contract's custom Ed25519Signature. Lazily imported; the mock/CLI paths
    # never touch it.
    "stellar-sdk>=15,<16",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["lumo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
