[package]
name = "amanah-policy-account"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
amanah-escrow = { path = "../escrow" }
ed25519-dalek = "1.0.1"
rand = "0.7.3"
